--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.12.9",
+    "@headlessui/react": "^1.7.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -20,6 +17,9 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
